--- a/AdventureGame.css
+++ b/AdventureGame.css
@@ -1,3 +1,10 @@
+body{
+background-image: url(/Pirate%20Chest/captians_quarters.jpg);
+    background-repeat: no-repeat;
+    background-position: top left;
+    margin-right: 200px;  
+}
+
 div.left {
     position:relative;
     top:150px;
@@ -10,4 +17,9 @@ div.right {
     top:0px;
     position:relative;
     right: 200px;
+}
+
+a{color: white;
+    font-family: fantasy;
+    font-size: 30px;
 }
